--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ php:
     - "5.3"
     - "5.4"
     - "5.5"
+    - "5.6"
+
 env:
     global:
     matrix:
@@ -16,6 +18,10 @@ install:
     - composer install --prefer-dist --dev
 
 script: ant -keep-going
+
+branches:
+  only:
+    - tng
 
 branches:
   only:
