--- a/.check-author.yml
+++ b/.check-author.yml
@@ -7,3 +7,4 @@ exclude:
 mapping:
   Andreas Isaak <info@andreas-isaak.de>: Andreas Isaak <andy.jared@googlemail.com>
   Stefan Heimes <stefan_heimes@hotmail.com>: Stefan heimes <stefan_heimes@hotmail.com>
+  Christopher Boelter <christopher@boelter.eu>: cboelter <christopher@boelter.eu>
