--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
     "metamodels/base-unit-tests": "~1.0"
   },
   "conflict": {
-    "contao/core": "3.0.*"
+    "contao/core": "3.4.0"
   },
   "autoload": {
     "psr-0": {
