--- a/composer.json
+++ b/composer.json
@@ -38,10 +38,8 @@
     "metamodels/core": "~2.0"
   },
   "require-dev": {
-    "cyberspectrum/contao-toolbox": "dev-master",
-    "contao-community-alliance/build-system": "~1.0",
-    "contao-community-alliance/build-system-all-tasks": "~1.0",
-    "contao-community-alliance/coding-standard": "~1.0",
+    "cyberspectrum/contao-toolbox": "~0.6",
+    "phpcq/all-tasks": "~1.0",
     "metamodels/base-unit-tests": "~1.0"
   },
   "conflict": {
